add: adiciona controller de autenticação
